<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    android:background="@drawable/grey">
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
        <Button
            android:id="@+id/button_wuyanjueju"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:textColor="#8DB6CD"
            android:textSize="6pt"
            android:text="@string/button_wuyanjueju">
        </Button>
         <Button
            android:id="@+id/button_qiyanjueju"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#8DB6CD"
            android:textSize="6pt"
            android:text="@string/button_qiyanjueju">
        </Button>
         <Button
            android:id="@+id/button_wuyanlvshi"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#8DB6CD"
            android:textSize="6pt"
            android:text="@string/button_wuyanlvshi">
        </Button>
         <Button
            android:id="@+id/button_qiyanlvshi"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#8DB6CD"
            android:textSize="6pt"
            android:text="@string/button_qiyanlvshi">
        </Button>
         <Button
            android:id="@+id/button_jintishirule"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#8DB6CD"
            android:textSize="6pt"
            android:text="@string/jintishirule">
        </Button>
         <Button
            android:id="@+id/button_savewyjj"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#8DB6CD"
            android:textSize="6pt"
            android:text="@string/save">
        </Button>
         <Button
            android:id="@+id/button_returnmain"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#8DB6CD"
            android:textSize="6pt"
            android:text="@string/returnmain">
        </Button>
   </LinearLayout>

    <LinearLayout
    	android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:layout_weight="1">
    <EditText
        android:id="@+id/edit_jueju_title"
        android:textColor="#FFFFFF"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColorHint="#FFD700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jueju_title"
        >
        
    </EditText>
    <EditText
        android:id="@+id/edit_jueju1"
        android:textColorHint="#FFD700"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jueju_info1"
        >
        
    </EditText>
    <EditText
        android:id="@+id/edit_jueju2"
        android:textColorHint="#FFD700"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jueju_info2"
        >
        
    </EditText>
    <EditText
        android:id="@+id/edit_jueju3"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColorHint="#FFD700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jueju_info3"
        >
        
    </EditText>
    <EditText
        android:id="@+id/edit_jueju4"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFD700"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jueju_info4"
        >
        
    </EditText>
    <Button
        android:id="@+id/button_funjj"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#8DB6CD"
        android:textSize="8pt"
        android:text="@string/judge_jj">
    </Button>
    <TextView
        android:id="@+id/jueju_warn"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jueju_warninfo"
        android:textColor="#FF7256"
        android:textSize="10pt"
        >
    </TextView>
    </LinearLayout>
</LinearLayout>
