<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    android:background="@drawable/grey">
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
        <Button
            android:id="@+id/button_rule_wuyanjueju"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:textColor="#8DB6CD"
            android:textSize="6pt"
            android:text="@string/ruleinfo_wuyanjueju">
        </Button>
         <Button
            android:id="@+id/button_rule_qiyanjueju"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#8DB6CD"
            android:textSize="6pt"
            android:text="@string/ruleinfo_qiyanjueju">
        </Button>
         <Button
            android:id="@+id/button_rule_wuyanlvshi"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#8DB6CD"
            android:textSize="6pt"
            android:text="@string/ruleinfo_wuyanlvshi">
        </Button>
         <Button
            android:id="@+id/button_rule_qiyanlvshi"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#8DB6CD"
            android:textSize="6pt"
            android:text="@string/ruleinfo_qiyanlvshi">
        </Button>
         <Button
            android:id="@+id/button_create"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#8DB6CD"
            android:textSize="6pt"
            android:text="@string/create">
        </Button>
        <Button
            android:id="@+id/button_returnmain"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#8DB6CD"
            android:textSize="6pt"
            android:text="@string/returnmain">
        </Button>
   </LinearLayout>

    <LinearLayout
    	android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:layout_weight="1">
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColor="#FFD700"
            android:textSize="12pt"
            android:text="@string/rulewarn"
            >
        </TextView>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp">
    		<TextView
        		android:id="@+id/jueju_warn"
        		android:layout_marginTop="30dp"
        		android:layout_marginLeft="20dp"
        		android:layout_marginRight="20dp"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/qiyanjuejuinfo"
        		android:textColor="#FFFFFF"
        		android:textSize="8pt"
        		>
    		</TextView>
    	</ScrollView>
    </LinearLayout>
</LinearLayout>
