<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/grey" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textSize="12pt"
        android:textColor="#F0F8FF"
        android:text="@string/backgroundtitle" />

    <TextView
        android:id="@+id/textview_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="80dip"
        android:textColor="#E6E6FA"
        android:textSize="10pt"
        android:text="@string/jintishi_info">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#8DB6CD"
            android:text="@string/create"
            style="?android:attr/borderlessButtonStyle" />

        <Button
            android:id="@+id/button_rule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#8DB6CD"
            android:text="@string/rule" 
             style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

</LinearLayout>