<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    android:background="@drawable/grey">
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
        <Button
            android:id="@+id/button_querywyjj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:textColor="#8DB6CD"
            android:textSize="6pt"
            android:text="@string/save_wyjj">
        </Button>
         <Button
            android:id="@+id/button_queryqyjj"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#8DB6CD"
            android:textSize="6pt"
            android:text="@string/save_qyjj">
        </Button>
         <Button
            android:id="@+id/button_querywyls"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#8DB6CD"
            android:textSize="6pt"
            android:text="@string/save_wyls">
        </Button>
         <Button
            android:id="@+id/button_queryqyls"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#8DB6CD"
            android:textSize="6pt"
            android:text="@string/save_qyls">
        </Button>
         <Button
            android:id="@+id/button_create_wyjj"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#8DB6CD"
            android:textSize="6pt"
            android:text="@string/create">
        </Button>
         <Button
            android:id="@+id/button_returnmain"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#8DB6CD"
            android:textSize="6pt"
            android:text="@string/returnmain">
        </Button>
   </LinearLayout>
   <LinearLayout
    	android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:layout_weight="1">
		<ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
         	<LinearLayout 
         	    android:id="@+id/ll_wyjj" 
         	    android:layout_width="match_parent" 
         	    android:layout_height="wrap_content"
         	    android:layout_marginTop="120dp"
         	    android:orientation="vertical"
         	    >
    		</LinearLayout>
        </ScrollView>
     </LinearLayout>
</LinearLayout>
